# web-proxy

./: .travis.yml  Dockerfile  Makefile  README.md  nginx.tmpl
app/: Procfile  main.tpl
confgen/: Cargo.toml
confgen/src/: config.rs  dispatcher.rs  docker.rs  env.rs  logger.rs  macros.rs  main.rs  writer.rs
defaults/: main.yml
gohome/src/confgen/: .gitignore  Makefile  confgen.go  config.go  container.go  dispatcher.go  env.go  glide.yaml
handlers/: main.yml
meta/: main.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
