[package]
name = "confgen"
version = "0.1.0"
authors = ["nanofi <nanogenomu@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
log = "^0.3"
lazy_static = "0.2.1"
httparse = "1.1.2"
rotor = "0.6.3"
rotor-tools = "0.3.2"
rustc-serialize = "0.3"
quick-error = "1.1.0"
nix = "^0.6"
